--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,25 +11,25 @@
   "dependencies": {
     "@expo-google-fonts/bai-jamjuree": "0.2.3",
     "@expo-google-fonts/roboto": "0.2.3",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.2.14",
     "axios": "1.4.0",
     "dayjs": "1.11.7",
-    "expo": "~48.0.15",
-    "expo-auth-session": "~4.0.3",
-    "expo-constants": "~14.2.1",
-    "expo-crypto": "~12.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "1.5.3",
-    "expo-secure-store": "~12.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "49.0.23",
+    "expo-auth-session": "~5.0.2",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-image-picker": "~14.3.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-status-bar": "~1.6.0",
     "nativewind": "2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "typescript": "^4.9.4"
+    "react-native": "0.72.10",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
